Frontend - Fixing letter spacing in light a candle form buttons

--- a/frontend/pages/light-a-candle/meditate/index.module.scss
+++ b/frontend/pages/light-a-candle/meditate/index.module.scss
@@ -99,7 +99,8 @@
     width: 25%;
   
     span {
-      font-size: .75rem;
+        letter-spacing: 2.6px;
+        font-size: .75rem;
     }
   
     div {
