--- a/frontend/pages/light-a-candle/send-a-prayer/WritePrayer.module.scss
+++ b/frontend/pages/light-a-candle/send-a-prayer/WritePrayer.module.scss
@@ -34,7 +34,7 @@
       flex-wrap: wrap;
       justify-content: space-between;
       margin-bottom: 5rem;
-      width: 76%;
+      width: 74%;
 
       > div {
         width: 45%;
@@ -95,9 +95,10 @@
   outline: none;
   color: white;
   margin-top: 3rem;
-  width: 20%;
+  width: 23%;
 
   span {
+    letter-spacing: 2.6px;
     font-size: .75rem;
   }
 
